@@ -1,2 +1,2 @@
-bin_PROGRAMS = layers_test
-layers_test_SOURCES = layered_surfaces.cc
+bin_PROGRAMS = layered_thickness
+layered_thickness_SOURCES = layered_surfaces.cc
